--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -20,8 +20,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pokedex.css" />
+    <link rel="stylesheet" href="./assets/css/global.css" />
+    <link rel="stylesheet" href="./assets/css/pokedex.css" />
   </head>
   <body>
     <section class="content">
@@ -32,8 +32,9 @@
       <div class="pagination"><button type="button" id="loadMoreButton">Load more</button></div>
     </section>
 
-    <script src="assets/js/pokemon-model.js"></script>
-    <script src="assets/js/pokeapi.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="./assets/js/pokemon-model.js"></script>
+    <script src="./assets/js/pokeapi.js"></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
+
